--- a/client-ts/src/static/DysisStyle.css
+++ b/client-ts/src/static/DysisStyle.css
@@ -1,11 +1,12 @@
 /** Loading Animation **/
 
 .loader {
+  
   border: 2px solid #f3f3f3; /* Light Gray */
   border-top: 2px solid #BF0000; /* Red */
   border-radius: 50%;
-  width: 10px;
-  height: 10px;
+  width: 4px;
+  height: 4px;
   animation: spin 2s linear infinite;
 }
 
@@ -14,12 +15,29 @@
   100% { transform: rotate(360deg); }
 }
 
+.loaderContainer {
+  display: 'inline-block'
+}
+
 /** Container **/
+
+.dysis-hosting-element {
+  flex-wrap: wrap;
+  display: inline-flex !important
+}
 
 .dysis-tag-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.dysis-text {
+  background-color: black;
+  color: white;
+  padding: 1px 4px;
+  border-radius: 8px 8px 8px 8px;
+  font-size: 9px;
 }
 
 /** Form Tag **/
