--- a/client/src/static/contentScript.css
+++ b/client/src/static/contentScript.css
@@ -63,22 +63,26 @@
 
 .dysis-tag-behavior.dysis-tag-left {
   background-color: rgb(99, 99, 99);
-  color: white
+  color: white;
+  cursor: help;
 }
 
 .dysis-tag-behavior-red {
   background-color: rgb(169, 1, 1);
   color: white;
+  cursor: help;
 } 
 
 .dysis-tag-behavior-green {
   background-color: green;
   color: white;
+  cursor: help;
 } 
 
 .dysis-tag-behavior-yellow {
   background-color: rgb(180, 180, 4);
   color: white;
+  cursor: help;
 } 
 
 /** Interests Tags **/
