--- a/client/src/static/contentScript.css
+++ b/client/src/static/contentScript.css
@@ -22,8 +22,8 @@
 /** Container **/
 
 .dysis-hosting-element {
-  flex-wrap: wrap;
-  /* display: inline-flex !important COMMENT: Not required when twice parentElement used */
+  flex-wrap: wrap !important;
+  display: inline-flex !important;
 }
 
 .dysis-tag-container {
