--- a/client/src/static/contentScript.css
+++ b/client/src/static/contentScript.css
@@ -23,7 +23,7 @@
 
 .dysis-hosting-element {
   flex-wrap: wrap !important;
-  display: inline-flex !important;
+  /* display: inline-flex !important; */ /* Sometimes messes up comment boxes */
 }
 
 .dysis-tag-container {
